attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743777489195.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/RLInt[ 12%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/InterpreterFactory.cpp.o
[ 18%] Linking CXX static library libai_language_lib.a
[ 75%] Built target ai_language_lib
[ 87%] Built target show_time
[ 93%] Building CXX object CMakeFiles/ai_lang.dir/src/ai_lang.cpp.o
/home/runner/workspace/ai_language/src/ai_lang.cpp: In function ‘void ai_language::runInteractiveMode()’:
/home/runner/workspace/ai_language/src/ai_lang.cpp:116:36: error: ‘virtual void ai_language::BaseInterpreter::listModels()’ is protected within this context
  116 |             interpreter->listModels();
      |             ~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /home/runner/workspace/ai_language/src/../include/interpreters/InterpreterFactory.h:5,
                 from /home/runner/workspace/ai_language/src/ai_lang.cpp:1:
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:89:18: note: declared protected here
   89 |     virtual void listModels();
      |                  ^~~~~~~~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:119:37: error: ‘virtual void ai_language::BaseInterpreter::showVersion()’ is protected within this context
  119 |             interpreter->showVersion();
      |             ~~~~~~~~~~~~~~~~~~~~~~~~^~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:86:18: note: declared protected here
   86 |     virtual void showVersion();
      |                  ^~~~~~~~~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:122:34: error: ‘virtual void ai_language::BaseInterpreter::showHelp()’ is protected within this context
  122 |             interpreter->showHelp();
      |             ~~~~~~~~~~~~~~~~~~~~~^~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:87:18: note: declared protected here
   87 |     virtual void showHelp();
      |                  ^~~~~~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:125:34: error: ‘virtual void ai_language::BaseInterpreter::showTime()’ is protected within this context
  125 |             interpreter->showTime();
      |             ~~~~~~~~~~~~~~~~~~~~~^~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:88:18: note: declared protected here
   88 |     virtual void showTime();
      |                  ^~~~~~~~
make[2]: *** [CMakeFiles/ai_lang.dir/build.make:76: CMakeFiles/ai_lang.dir/src/ai_lang.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:140: CMakeFiles/ai_lang.dir/all] Error 2
make: *** [Makefile:91: all] Error 2